It returned to the state that previously refactoring

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="lib/topojson.js"></script>
     <script src="lib/datamaps.all.min.js"></script>
   </head>
-  <body onLoad="displayText()">
+  <body>
     <div id= "leftPanel">
       <div id="mapPane">
         <div id="mapLeftPane">
@@ -33,6 +33,7 @@
     <script src="./js/map.js"></script>
     <script src="./js/article.js"></script>
     <script src="./js/graph.js"></script>
+    <script src="./js/init.js"></script>
 
   </body>
 </html>
