Change title name

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>ElucignageMap</title>
+    <title>Elucignage2.0</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/map.css" />
