Add annotationon the map

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
       <div id= "leftPanel">
         <div id="mapPane">
           <div id="mapLeftPane">
+              <div style="position:absolute; top:380px; left:70px; z-index: 1;">
+              <img src="/images/src.png" width="25" height="25">
+            </div>
+            <div style="position:absolute; top:395px; left:100px; z-index: 1;">
+              <img src="/images/evl.png" width="25" height="25">
+            </div>
+            <div style="position:absolute; top:300px; left:150px; z-index: 1;">
+              <img src="/images/rsn.png" width="25" height="25">
+            </div>
+            <div style="position:absolute; top:350px; left:80px; z-index: 1;">
+              <img src="/images/oth.png" width="25" height="25">
+            </div>
+            <div style="position:absolute; top:370px; left:230px; z-index: 1;">
+              <img src="/images/sit.png" width="25" height="25">
+            </div>
             <div id="africa"></div>
           </div>
           <div id="mapRightPane">
