Comment out the processing of the icon

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id= "leftPanel">
         <div id="mapPane">
           <div id="mapLeftPane">
-              <div style="position:absolute; top:380px; left:70px; z-index: 1;">
+<!--               <div style="position:absolute; top:380px; left:70px; z-index: 1;">
               <img src="/images/src.png" width="25" height="25">
             </div>
             <div style="position:absolute; top:395px; left:100px; z-index: 1;">
@@ -41,7 +41,7 @@
             </div>
             <div style="position:absolute; top:370px; left:230px; z-index: 1;">
               <img src="/images/sit.png" width="25" height="25">
-            </div>
+            </div> -->
             <div id="africa"></div>
           </div>
           <div id="mapRightPane">
