--- a/index.html
+++ b/index.html
@@ -27,21 +27,11 @@
       <div id= "leftPanel">
         <div id="mapPane">
           <div id="mapLeftPane">
-<!--               <div style="position:absolute; top:380px; left:70px; z-index: 1;">
-              <img src="/images/src.png" width="25" height="25">
-            </div>
-            <div style="position:absolute; top:395px; left:100px; z-index: 1;">
-              <img src="/images/evl.png" width="25" height="25">
-            </div>
-            <div style="position:absolute; top:300px; left:150px; z-index: 1;">
-              <img src="/images/rsn.png" width="25" height="25">
-            </div>
-            <div style="position:absolute; top:350px; left:80px; z-index: 1;">
-              <img src="/images/oth.png" width="25" height="25">
-            </div>
-            <div style="position:absolute; top:370px; left:230px; z-index: 1;">
-              <img src="/images/sit.png" width="25" height="25">
-            </div> -->
+              <img class = "icon" src="/images/sonota.png" style="top:355px; left:30px;">
+              <img class = "icon" src="/images/syutten.png" style="top:385px; left:50px">
+              <img class = "icon" src="/images/handan.png" style="top:405px; left:95px">
+              <img class = "icon" src="/images/riyu.png" style="top:290px; left:140px">
+              <img class = "icon" src="/images/zyoukyou.png" style="top:360px; left:220px">
             <div id="africa"></div>
           </div>
           <div id="mapRightPane">
